third_party/WebKit/LayoutTests/http/tests/worklet/resources/import-tests.js
@@ -40,12 +40,12 @@ function runImportTests(worklet, opt_path) {
     }, 'Importing a script which throws should still resolve the given promise.');
 
     promise_test(function() {
-        return worklet.addModule(path + 'non-existant-worklet-script.js').then(function() {
+        return worklet.addModule(path + 'non-existent-worklet-script.js').then(function() {
             assert_unreached('addModule should fail.');
         }).catch(function(error) {
-            assert_equals(error.name, 'NetworkError', 'error should be a NetworkError.');
+            assert_equals(error.name, 'AbortError', 'error should be an AbortError.');
         });
-    }, 'Importing a non-existant script rejects the given promise with a NetworkError.');
+    }, 'Importing a non-existent script rejects the given promise with an AbortError.');
 
     promise_test(function() {
         return worklet.addModule('http://invalid:123$').then(function() {
